--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,8 @@ authors = [
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
-    "torch (>=2.5.1,<3.0.0)"
+    "torch (>=2.5.1,<3.0.0)",
+    "click (>=8.1.8,<9.0.0)"
 ]
 
 
@@ -21,3 +22,5 @@ black = "^24.10.0"
 flake8 = "^7.1.1"
 pytest = "^8.3.4"
 
+[project.scripts]
+torch_learn = "torch_learn.main:cli"
